# topprism_chatopt

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/topprism_chatopt/: __init__.py  __main__.py  app.py  knowledge_base.json  llm_generator.py  or_solver.py  rag_retriever.py  requirements.txt  utils.py
src/topprism_chatopt/data/: agents.csv  customers.csv
tests/: test_improvements.py  test_simple.py
